include/dss_capi.h

    /*! 
    Complex Array of pu voltages at the bus.
    */
    DSS_CAPI_DLL void Bus_Get_puVoltages(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_puVoltages but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Bus_Get_puVoltages_GR(void);
    /*! 
    Complex Zero-Sequence short circuit impedance at bus.
    */
    DSS_CAPI_DLL void Bus_Get_Zsc0(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_Zsc0 but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Bus_Get_Zsc0_GR(void);
    /*! 
    Complex Positive-Sequence short circuit impedance at bus.
    */
    DSS_CAPI_DLL void Bus_Get_Zsc1(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_Zsc1 but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Bus_Get_Zsc1_GR(void);
    /*! 
    Complex array of Zsc matrix at bus. Column by column.
    */
    DSS_CAPI_DLL void Bus_Get_ZscMatrix(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_ZscMatrix but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Bus_Get_ZscMatrix_GR(void);
    DSS_CAPI_DLL uint16_t Bus_ZscRefresh(void);
    /*! 
    Complex array of Ysc matrix at bus. Column by column.
    */
    DSS_CAPI_DLL void Bus_Get_YscMatrix(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_YscMatrix but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Bus_Get_YscMatrix_GR(void);
    /*! 
    Indicates whether a coordinate has been defined for this bus
    */
    DSS_CAPI_DLL uint16_t Bus_Get_Coorddefined(void);
    /*! 
    X Coordinate for bus (double)
    */
    DSS_CAPI_DLL double Bus_Get_x(void);
    /*! 
    X Coordinate for bus (double)
    */
    DSS_CAPI_DLL void Bus_Set_x(double Value);
    /*! 
    Y coordinate for bus(double)
    */
    DSS_CAPI_DLL double Bus_Get_y(void);
    /*! 
    Y coordinate for bus(double)
    */
    DSS_CAPI_DLL void Bus_Set_y(double Value);
    /*! 
    Distance from EnergyMeter (if non-zero)
    */
    DSS_CAPI_DLL double Bus_Get_Distance(void);
    DSS_CAPI_DLL int32_t Bus_GetUniqueNodeNumber(int32_t StartNumber);
    /*! 
    Complex Double array of Sequence Voltages (0, 1, 2) at this Bus.
    */
    DSS_CAPI_DLL void Bus_Get_CplxSeqVoltages(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_CplxSeqVoltages but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Bus_Get_CplxSeqVoltages_GR(void);