src/v7/CAPI_Bus.pas


Begin
   IF ActiveCircuit = nil Then Begin
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1)
   End
   ELSE With ActiveCircuit Do
   IF (ActiveBusIndex > 0) and (ActiveBusIndex <= Numbuses) Then
   Begin
      pBus    := Buses^[ActiveBusIndex];
      With pBus Do
      Begin
          Nvalues := NumNodesThisBus;
          Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (2*NValues -1) + 1);
          iV := 0;
          jj := 1;
          If kVBase>0.0 Then BaseFactor := 1000.0*kVBase
                        Else BaseFactor := 1.0;
          FOR i := 1 to  NValues DO
          Begin
                // this code so nodes come out in order from smallest to larges
                Repeat
                     NodeIdx := FindIdx(jj);  // Get the index of the Node that matches jj
                     inc(jj)
                Until NodeIdx>0;

                Volts      := Solution.NodeV^[GetRef(NodeIdx)];
                Result[iV] := Volts.re/BaseFactor;
                Inc(iV);
                Result[iV] := Volts.im/BaseFactor;
                Inc(iV);
          End;
      End;
  End
  ELSE Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);  // just return null array

end;
PROCEDURE Bus_Get_puVoltages_GR();cdecl;
// Same as Bus_Get_puVoltages but uses global result (GR) pointers
begin
   Bus_Get_puVoltages(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
PROCEDURE Bus_Get_Zsc0(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
VAR
  Result: PDoubleArray;  Z:Complex;

begin
    IF ActiveCircuit = nil Then Begin
            Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1)
    End
    ELSE With ActiveCircuit Do
    IF (ActiveBusIndex > 0) and (ActiveBusIndex <= Numbuses) Then
    Begin
            Z := Buses^[ActiveBusIndex].Zsc0;
            Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (1) + 1);
            Result[0] := Z.Re;
            Result[1] := Z.Im;
    End
    ELSE Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1) ;  // just return null array
end;
PROCEDURE Bus_Get_Zsc0_GR();cdecl;
// Same as Bus_Get_Zsc0 but uses global result (GR) pointers
begin
   Bus_Get_Zsc0(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
PROCEDURE Bus_Get_Zsc1(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
VAR
  Result: PDoubleArray; Z:Complex;

begin

    IF ActiveCircuit = nil Then Begin
            Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1)
    End
    ELSE With ActiveCircuit Do
    IF (ActiveBusIndex > 0) and (ActiveBusIndex <= Numbuses) Then
    Begin
            Z := Buses^[ActiveBusIndex].Zsc1;
            Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (1) + 1);
            Result[0] := Z.Re;
            Result[1] := Z.Im;
    End
    ELSE Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1) ;  // just return null array

end;
PROCEDURE Bus_Get_Zsc1_GR();cdecl;
// Same as Bus_Get_Zsc1 but uses global result (GR) pointers
begin
   Bus_Get_Zsc1(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
PROCEDURE Bus_Get_ZscMatrix(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
VAR
  Result: PDoubleArray;
    Nelements, iV, i, j : Integer;
    Z:Complex;

begin

    IF ActiveCircuit = nil Then Begin
            Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1)
    End
    ELSE

    Try

    With ActiveCircuit Do
      IF (ActiveBusIndex > 0) and (ActiveBusIndex <= Numbuses) Then
      Begin
        If Assigned(Buses^[ActiveBusIndex].Zsc) Then Begin
          Nelements := Buses^[ActiveBusIndex].Zsc.Order;
          Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (((2*Nelements*Nelements)-1)) + 1);
          iV := 0;
          With Buses^[ActiveBusIndex] Do
          For i := 1 to Nelements Do
            For j := 1 to Nelements Do  Begin
              Z := Zsc.GetElement(i,j);
              Result[iV] := Z.Re;
              Inc(iV);
              Result[iV] := Z.Im;
              Inc(iV);
            End;

        End
        Else  Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1) ;  // just return null array
      End
      ELSE Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1) ;  // just return null array

      Except
          On E:Exception Do DoSimpleMsg('ZscMatrix Error: ' + E.message + CRLF , 5016);
      End;

end;
PROCEDURE Bus_Get_ZscMatrix_GR();cdecl;
// Same as Bus_Get_ZscMatrix but uses global result (GR) pointers
begin
   Bus_Get_ZscMatrix(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
function Bus_ZscRefresh():WordBool;cdecl;
begin

   Result := False;   // Init in case of failure

   If ExecHelper.DoZscRefresh = 0 Then Result := TRUE;

end;
//------------------------------------------------------------------------------
PROCEDURE Bus_Get_YscMatrix(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
VAR
  Result: PDoubleArray;
    Nelements, iV, i, j : Integer;
    Y1:Complex;

begin

    IF ActiveCircuit = nil Then Begin
            Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1)
    End
    ELSE

    Try

    With ActiveCircuit Do
      IF (ActiveBusIndex > 0) and (ActiveBusIndex <= Numbuses) Then
      Begin
        If Assigned(Buses^[ActiveBusIndex].Ysc) Then Begin
          Nelements := Buses^[ActiveBusIndex].Ysc.Order;
          Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (((2*Nelements*Nelements)-1)) + 1);
          iV := 0;
          With Buses^[ActiveBusIndex] Do
          For i := 1 to Nelements Do
            For j := 1 to Nelements Do  Begin
              Y1 := Ysc.GetElement(i,j);
              Result[iV] := Y1.Re;
              Inc(iV);
              Result[iV] := Y1.Im;
              Inc(iV);
            End;

        End
        Else  Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1) ;  // just return null array
      End
      ELSE Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1) ;  // just return null array

      Except
          On E:Exception Do DoSimpleMsg('ZscMatrix Error: ' + E.message + CRLF, 5017 );
      End;


end;
PROCEDURE Bus_Get_YscMatrix_GR();cdecl;
// Same as Bus_Get_YscMatrix but uses global result (GR) pointers
begin
   Bus_Get_YscMatrix(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
function Bus_Get_Coorddefined():WordBool;cdecl;
begin
     Result := FALSE;
     If (ActiveCircuit <> Nil) Then With ActiveCircuit Do
      IF (ActiveBusIndex > 0) and (ActiveBusIndex <= Numbuses) Then
       IF (Buses^[ActiveCircuit.ActiveBusIndex].Coorddefined) Then Result := TRUE;
end;
//------------------------------------------------------------------------------
function Bus_Get_x():Double;cdecl;
begin
    Result := 0.0;
     If (ActiveCircuit <> Nil) Then With ActiveCircuit Do
      IF (ActiveBusIndex > 0) and (ActiveBusIndex <= Numbuses) Then
       IF (Buses^[ActiveCircuit.ActiveBusIndex].Coorddefined) Then
         Result := Buses^[ActiveCircuit.ActiveBusIndex].x;
end;
//------------------------------------------------------------------------------
procedure Bus_Set_x(Value: Double);cdecl;
begin
     If (ActiveCircuit <> Nil) Then With ActiveCircuit Do
      IF (ActiveBusIndex > 0) and (ActiveBusIndex <= Numbuses) Then
       Begin
         Buses^[ActiveCircuit.ActiveBusIndex].Coorddefined := TRUE;
         Buses^[ActiveCircuit.ActiveBusIndex].x := Value;
       End;
end;
//------------------------------------------------------------------------------
function Bus_Get_y():Double;cdecl;
begin
    Result := 0.0;
     If (ActiveCircuit <> Nil) Then With ActiveCircuit Do
      IF (ActiveBusIndex > 0) and (ActiveBusIndex <= Numbuses) Then
       IF (Buses^[ActiveCircuit.ActiveBusIndex].Coorddefined) Then
         Result := Buses^[ActiveCircuit.ActiveBusIndex].y;
end;
//------------------------------------------------------------------------------
procedure Bus_Set_y(Value: Double);cdecl;
begin
   If (ActiveCircuit <> Nil) Then With ActiveCircuit Do
      IF (ActiveBusIndex > 0) and (ActiveBusIndex <= Numbuses) Then
       Begin
         Buses^[ActiveBusIndex].Coorddefined := TRUE;
         Buses^[ActiveBusIndex].y := Value;
       End;
end;
//------------------------------------------------------------------------------
function Bus_Get_Distance():Double;cdecl;
begin
    Result := 0.0;
    If (ActiveCircuit <> Nil) Then
     With ActiveCircuit Do
      IF ((ActiveBusIndex > 0) and (ActiveBusIndex <= Numbuses)) Then
        Result := Buses^[ActiveBusIndex].DistFromMeter;
end;
//------------------------------------------------------------------------------
function Bus_GetUniqueNodeNumber(StartNumber: Integer):Integer;cdecl;
begin
    if ActiveCircuit <> Nil then
    With ActiveCircuit Do

    if ActiveBusIndex > 0 then
      Result := Utilities.GetUniqueNodeNumber(BusList.Get(ActiveBusIndex), StartNumber);
end;
//------------------------------------------------------------------------------
PROCEDURE Bus_Get_CplxSeqVoltages(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
// Compute sequence voltages for Active Bus
// Complex values
// returns a set of seq voltages (3) in 0, 1, 2 order
VAR
  Result: PDoubleArray;
  Nvalues,i, iV:Integer;
  VPh, V012 : Array[1..3] of Complex;

Begin
   IF ActiveCircuit = nil Then Begin
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1)
   End
   ELSE With ActiveCircuit Do
   IF (ActiveBusIndex > 0) and (ActiveBusIndex <= Numbuses) Then
   Begin
      Nvalues := Buses^[ActiveBusIndex].NumNodesThisBus;
      If Nvalues > 3 then Nvalues := 3;

      // Assume nodes labelled 1, 2, and 3 are the 3 phases
      Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (5) + 1);
      IF Nvalues <> 3 THEN
          For i := 1 to 6 DO Result[i-1] := -1.0  // Signify seq voltages n/A for less then 3 phases
      ELSE
      Begin
          iV := 0;
          FOR i := 1 to 3 DO Vph[i] := Solution.NodeV^[Buses^[ActiveBusIndex].Find(i)];

          Phase2SymComp(@Vph, @V012);   // Compute Symmetrical components

          For i := 1 to 3 DO  // Stuff it in the result
          Begin
             Result[iV] := V012[i].re;
             Inc(iV);
             Result[iV] := V012[i].im;
             Inc(iV);
          End;
      End;
   End
  ELSE Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);

end;
PROCEDURE Bus_Get_CplxSeqVoltages_GR();cdecl;
// Same as Bus_Get_CplxSeqVoltages but uses global result (GR) pointers
begin
   Bus_Get_CplxSeqVoltages(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;
